--- a/pages/model/custom/index.wxss
+++ b/pages/model/custom/index.wxss
@@ -20,6 +20,20 @@ page view, page label {
 .swiper-item{
   height: 100%;
   background-size: cover;
+  position: relative;
+}
+.delete_item {
+  position: absolute;
+  right: 144rpx;
+  bottom: 44rpx;
+  width: 80rpx;
+  height: 80rpx;
+  padding: 20rpx;
+  border-radius: 12rpx;
+  background: #2c2008;
+  text-align: center;
+  z-index: 5;
+  box-sizing: border-box;
 }
 .theme_control{
   position: fixed;
@@ -52,6 +66,12 @@ page view, page label {
   padding-left: 40rpx;
   margin-bottom: 40rpx;
 }
+.theme_content .content_placeholder {
+  color: #999999;
+  font-size: 28rpx;
+  line-height: 44rpx;
+  height: 200rpx;
+}
 .content_input{
   border-bottom: solid 1rpx #e5e5e5;
   position: relative;
@@ -68,20 +88,20 @@ page view, page label {
   font-size: 40rpx;
 }
 .content_input input{
-  font-size: 32rpx;
+  font-size: 28rpx;
   height: 24px;
   line-height: 24px;
   color: #333333;
 }
 .time_picker_content{
-  font-size: 32rpx;
+  font-size: 28rpx;
   height: 24px;
   line-height: 24px;
   color: #333333;
 }
 .time_picker_placeholder{
   color: #999999;
-  font-size: 32rpx;
+  font-size: 28rpx;
   height: 24px;
   line-height: 24px;
 }
@@ -132,8 +152,8 @@ page view, page label {
   position: absolute;
   right: 44rpx;
   bottom: 44rpx;
-  width: 100rpx;
-  height: 100rpx;
+  width: 80rpx;
+  height: 80rpx;
   padding: 20rpx 0;
   border-radius: 12rpx;
   background: #2c2008;
@@ -143,8 +163,8 @@ page view, page label {
   box-sizing: border-box;
 }
 .add_pic image{
-  width: 60rpx;
-  height: 60rpx;
+  width: 40rpx;
+  height: 40rpx;
   margin: auto;
 }
 
