--- a/pages/model/joinerInfo/index.wxml
+++ b/pages/model/joinerInfo/index.wxml
@@ -50,13 +50,8 @@
       <view class="modal_cell_row">
         设为必填项
         <view class="modal_cell_item">
-          <switch color="#fda402" checked="{{add_option.require}}" bindchange="addRequireChange" />
+          <switch color="#fda402" checked="{{add_option.required}}" bindchange="addRequireChange" />
         </view>
-      </view>
-    </view>
-    <view class="modal_cell">
-      <view class="modal_cell_row">
-        <input placeholder="输入报名项key值（英文字母）" maxlength="10" value="{{add_option.name}}" data-key="name" bindinput="inputOnChange" />
       </view>
     </view>
     <block wx:if="{{add_option.type === 'text'}}">
@@ -141,7 +136,7 @@
         </view>
       </view>
     </block>
-    <block wx:elif="{{add_option.type === 'picture'}}">
+    <block wx:elif="{{add_option.type === 'image'}}">
       <view class="modal_cell">
         <view class="modal_cell_row text_area_row">
           <textarea placeholder="对需上传的图片的描述（限250字，报名者最多可提交9张）" maxlength="250" value="{{add_option.text}}" data-key="text" bindinput="inputOnChange"/>
