--- a/pages/public/public/index.wxml
+++ b/pages/public/public/index.wxml
@@ -1,160 +1,170 @@
 <!--pages/model/custom/index.wxml-->
 <title-bar color="{{title_color}}" icon_type="{{icon_type}}" bg_opacity="{{bg_opacity}}">
-  <view style="text-align: center;">发布活动</view>
+	<view style="text-align: center;">编辑活动</view>
 </title-bar>
 
 <view class="theme_pic">
-  <view class="theme_pic_frame">
-    <view class="add_pic" bindtap="addPic" wx:if="{{activity.photos.length < 9}}">
-      <image src="./images/icon_camera.png" mode="aspectFit" />
-    </view>
-    <swiper indicator-dots="true" indicator-color="rgba(255, 255, 255, 0.3)" indicator-active-color="#ffffff">
-      <block wx:if="{{activity.photos.length > 0}}">
-        <block wx:for="{{activity.photos}}" wx:key="{{item.id}}">
-          <swiper-item>
-            <view class="swiper-item">
-              <image src="{{baseUrl.imageUrl + '/' + item.name}}" mode="aspectFill"></image>
-            </view>
-          </swiper-item>
-        </block>
-      </block>
-      <block wx:else>
-        <swiper-item>
-          <view class="swiper-item">
-            <image src="../../../images/pic_01.jpg" mode="aspectFill"></image>
-          </view>
-        </swiper-item>
-      </block>
-    </swiper>
-  </view>
+	<view class="theme_pic_frame">
+		<view class="add_pic" bindtap="addPic" wx:if="{{activity.photos.length < 9}}">
+			<image src="./images/icon_camera.png" mode="aspectFit" />
+		</view>
+		<swiper indicator-dots="true" indicator-color="rgba(255, 255, 255, 0.3)" indicator-active-color="#ffffff">
+			<block wx:if="{{activity.photos.length > 0}}">
+				<block wx:for="{{activity.photos}}" wx:key="id">
+					<swiper-item>
+						<view class="swiper-item">
+							<image src="{{baseUrl.imageUrl + '/' + item.name}}" mode="aspectFill"></image>
+						</view>
+						<view class="delete_item" catchtap="deletePic" data-index="{{index}}">
+							<image src="../../../images/activities/icon_delete_pic.png" />
+						</view>
+					</swiper-item>
+				</block>
+			</block>
+			<block wx:else>
+				<swiper-item>
+					<view class="swiper-item">
+						<image src="https://upload.51bmb.com/web/Picture1454586220407.jpg?imageView2/2/w/640" mode="aspectFill"></image>
+					</view>
+				</swiper-item>
+			</block>
+		</swiper>
+	</view>
 </view>
 
 <view class="theme_content" style="border-bottom: solid 1px #e5e5e5">
-  <view class="content_input">
-    <i-icon type="label_fill" size="48" class="input_icon" />
-    <input placeholder="活动主题（不超过35个字符）" value="{{activity.title}}" data-name="title" maxlength="35" bindinput="inputOnChange" />
-  </view>
-  <navigator url="../../model/change-time/index?key=beginTime" class="content_input">
-    <i-icon type="time_fill" size="48" class="input_icon" /> {{activity.beginTimeStr}} 开始
-  </navigator>
-  <navigator url="../../model/change-time/index?key=endTime" class="content_input">
-    <view class="time_picker_content" wx:if="{{activity.endTimeStr !== ''}}">
-      {{activity.endTimeStr}} 结束
-      <view class="clear_selct" catchtap="clearEndTime">
-        <icon type="clear" size="20" color="#d5d5d5" />
-      </view>
-    </view>
-    <view class="time_picker_placeholder" wx:else>活动结束时间（选填）</view>
-  </navigator>
-  <navigator url="../../model/address-edit/index" class="content_input">
+	<view class="content_input">
+		<i-icon type="label_fill" size="48" class="input_icon" />
+		<input placeholder="活动主题（不超过35个字符）" value="{{activity.title}}" data-name="title" maxlength="35" bindinput="inputOnChange" />
+	</view>
+	<navigator url="../../model/change-time/index?key=beginTime" class="content_input">
+		<i-icon type="time_fill" size="48" class="input_icon" /> {{activity.beginTimeStr}} 开始
+	</navigator>
+	<navigator url="../../model/change-time/index?key=endTime" class="content_input">
+		<view class="time_picker_content" wx:if="{{activity.endTimeStr !== ''}}">
+			{{activity.endTimeStr === '1970-01-01 08:00' ? "不限结束时间" : activity.endTimeStr + '结束'}} 
+			<view class="clear_selct" catchtap="clearEndTime">
+				<icon type="clear" size="20" color="#d5d5d5" />
+			</view>
+		</view>
+		<view class="time_picker_placeholder" wx:else>活动结束时间（选填）</view>
+	</navigator>
+	<view bindtap="setAddress" class="content_input">
     <i-icon type="coordinates_fill" size="48" class="input_icon" />
     <block wx:if="{{activity.address.longAddress}}">
       {{activity.address.longAddress}}
     </block>
     <block wx:else>
-      <input placeholder="活动详细地址（选填）"  />
+      <text style="color:#999999">请选择地址</text>
+    </block>
+  </view>
+</view>
+
+<view class="theme_content">
+	<navigator url="../rich-editor/index?content={{enCodeIntro}}" class="theme_rich_text">
+    <block wx:if="{{activity.intro}}">
+      <rich-text nodes="{{activity.intro}}"></rich-text>
+    </block>
+    <block wx:else>
+      <view class="content_placeholder">
+        输入活动介绍（选填）。详细精彩的活动描述可以吸引更多人哦
+      </view>
     </block>
   </navigator>
+	<view class="content_input" bindtap="financialSettingVisibleChange">
+		<i-icon type="financial_fill" size="48" class="input_icon" />
+		<view class="content_cell">
+			<view class="content_cell_title">费用设置</view>
+			<block wx:if="{{activity.payPath == '0'}}">免费</block>
+			<block wx:elif="{{activity.payPath == '1'}}"></block>
+			<block wx:else>{{activity.charge ? activity.charge : 0}}元</block>
+			<!-- {{joinerNum === 0 ? "人数不限" : joinerNum}} -->
+		</view>
+	</view>
+	<radio-group wx:if="{{financialSetting}}" class="input_cell" data-name="payPath" bindchange="inputOnChange">
+		<label class="input_cell_row">
+			<view class="label">
+				<view class="input_cell_icon">
+					<i-icon type="success_fill" size="48" color="#999999" class="input_icon" wx:if="{{activity.payPath == '0'}}" />
+				</view>
+				活动免费
+			</view>
+			<view class="form_item">
+			</view>
+			<radio value="0" hidden="{{true}}"></radio>
+		</label>
+		<label class="input_cell_row">
+			<view class="label">
+				<view class="input_cell_icon">
+					<i-icon type="success_fill" size="48" color="#999999" class="input_icon" wx:if="{{activity.payPath == '1'}}" />
+				</view>
+				活动后再AA
+			</view>
+			<view class="form_item">
+			</view>
+			<radio value="1" hidden="{{true}}"></radio>
+		</label>
+		<label class="input_cell_row">
+			<view class="label">
+				<view class="input_cell_icon">
+					<i-icon type="success_fill" size="48" color="#999999" class="input_icon" wx:if="{{activity.payPath == '2'}}" />
+				</view>
+				活动现场付款
+			</view>
+			<view class="form_item">
+				<input value="{{activity.charge}}" placeholder="请输入金额" data-name="charge" bindinput="inputOnChange" wx:if="{{activity.payPath == '2'}}" />
+			</view>
+			<radio value="2" hidden="{{true}}"></radio>
+		</label>
+		<label class="input_cell_row">
+			<view class="label">
+				<view class="input_cell_icon">
+					<i-icon type="success_fill" size="48" color="#999999" class="input_icon" wx:if="{{activity.payPath == '3'}}" />
+				</view>
+				线上支付
+			</view>
+			<view class="form_item">
+				<input value="{{activity.charge}}" placeholder="限1元" data-name="charge" bindinput="inputOnChange" wx:if="{{activity.payPath == '3'}}" />
+			</view>
+			<radio value="3" hidden="{{true}}"></radio>
+		</label>
+	</radio-group>
+</view>
+<view class="theme_content">
+	<view class="content_input">
+		<i-icon type="success_fill" size="48" class="input_icon" />
+		<picker bindchange="onPickChange" data-name="publicType" value="{{activity.publicType}}" range="{{pravicy_arr}}">
+			<view class="time_picker_content">
+				{{pravicy_arr[activity.publicType]}}
+			</view>
+		</picker>
+	</view>
 </view>
 
 <view class="theme_content">
-  <view class="theme_rich_text">
-    <textarea value="{{activity.intro}}" placeholder="输入活动介绍（选填）。详细精彩的活动描述可以吸引更多人哦" bindinput="inputOnChange" data-name="intro"></textarea>
-  </view>
-  <view class="content_input" bindtap="financialSettingVisibleChange">
-    <i-icon type="financial_fill" size="48" class="input_icon" />
-    <view class="content_cell">
-      <view class="content_cell_title">费用设置</view>
-      <block wx:if="{{activity.payPath == '0'}}">免费</block>
-      <block wx:elif="{{activity.payPath == '1'}}"></block>
-      <block wx:else>{{activity.charge ? activity.charge : 0}}元</block>
-      <!-- {{joinerNum === 0 ? "人数不限" : joinerNum}} -->
-    </view>
-  </view>
-  <radio-group wx:if="{{financialSetting}}" class="input_cell" data-name="payPath" bindchange="inputOnChange">
-    <label class="input_cell_row">
-      <view class="label">
-        <view class="input_cell_icon">
-          <i-icon type="success_fill" size="48" color="#999999" class="input_icon" wx:if="{{activity.payPath == '0'}}" />
-        </view>
-        活动免费
-      </view>
-      <view class="form_item">
-      </view>
-      <radio value="0" hidden="{{true}}"></radio>
-    </label>
-    <label class="input_cell_row">
-      <view class="label">
-        <view class="input_cell_icon">
-          <i-icon type="success_fill" size="48" color="#999999" class="input_icon" wx:if="{{activity.payPath == '1'}}" />
-        </view>
-        活动后再AA
-      </view>
-      <view class="form_item">
-      </view>
-      <radio value="1" hidden="{{true}}"></radio>
-    </label>
-    <label class="input_cell_row">
-      <view class="label">
-        <view class="input_cell_icon">
-          <i-icon type="success_fill" size="48" color="#999999" class="input_icon" wx:if="{{activity.payPath == '2'}}" />
-        </view>
-        活动现场付款
-      </view>
-      <view class="form_item">
-        <input value="{{activity.charge}}" placeholder="请输入金额" data-name="charge" bindinput="inputOnChange" wx:if="{{activity.payPath == '2'}}" />
-      </view>
-      <radio value="2" hidden="{{true}}"></radio>
-    </label>
-    <label class="input_cell_row">
-      <view class="label">
-        <view class="input_cell_icon">
-          <i-icon type="success_fill" size="48" color="#999999" class="input_icon" wx:if="{{activity.payPath == '3'}}" />
-        </view>
-        线上支付
-      </view>
-      <view class="form_item">
-        <input value="{{activity.charge}}" placeholder="限1元" data-name="charge" bindinput="inputOnChange" wx:if="{{activity.payPath == '3'}}" />
-      </view>
-      <radio value="3" hidden="{{true}}"></radio>
-    </label>
-  </radio-group>
-</view>
-<view class="theme_content">
-  <view class="content_input">
-    <i-icon type="success_fill" size="48" class="input_icon" />
-    <picker bindchange="onPickChange" data-name="publicType" value="{{activity.publicType}}" range="{{pravicy_arr}}">
-      <view class="time_picker_content">
-        {{pravicy_arr[activity.publicType]}}
-      </view>
-    </picker>
-  </view>
-</view>
-
-<view class="theme_content">
-  <view class="content_input">
-    <i-icon type="success_fill" size="48" class="input_icon" />
-    <picker bindchange="onPickChange" data-name="anonSignUp" value="{{activity.anonSignUp}}" range="{{real_name_arr}}">
-      <view class="time_picker_content">
-        {{real_name_arr[activity.anonSignUp]}}
-      </view>
-    </picker>
-  </view>
+	<view class="content_input">
+		<i-icon type="success_fill" size="48" class="input_icon" />
+		<picker bindchange="onPickChange" data-name="anonSignUp" value="{{activity.anonSignUp}}" range="{{real_name_arr}}">
+			<view class="time_picker_content">
+				{{real_name_arr[activity.anonSignUp]}}
+			</view>
+		</picker>
+	</view>
 </view>
 <view class="agreement_text">
-  <icon type="success" size="12" color="{{agree ? '#fda402' : '#d5d5d5'}}" bindtap="agreeOnChange" /> 同意
-  <text style="color:#fda402">《报名吧服务协议》</text>
+	<icon type="success" size="12" color="{{agree ? '#fda402' : '#d5d5d5'}}" bindtap="agreeOnChange" /> 同意
+	<text style="color:#fda402">《报名吧服务协议》</text>
 </view>
 
 <view class="theme_control">
-  <i-row>
-    <i-col span="10">
-      <button type="primary" size="mini" class="defult_btn" bindtap="seniorSetting"> 高级设置 </button>
-    </i-col>
-    <i-col span="14">
-      <button type="primary" size="mini" class="defult_btn public_btn" bindtap="ajaxPublicActivity"> 立即发布 </button>
-    </i-col>
-  </i-row>
+	<i-row>
+		<i-col span="10">
+			<button type="primary" size="mini" class="defult_btn" bindtap="seniorSetting"> 高级设置 </button>
+		</i-col>
+		<i-col span="14">
+			<button type="primary" size="mini" class="defult_btn public_btn" bindtap="ajaxPublicActivity"> 立即发布 </button>
+		</i-col>
+	</i-row>
 </view>
 
 <i-modal title="纵向排列的按钮" visible="{{ visible4 }}" actions="{{ actions4 }}" action-mode="{{ vertical }}" bind:click="handleClick4">
