--- a/pages/public/public/index.wxss
+++ b/pages/public/public/index.wxss
@@ -132,8 +132,8 @@ page view, page label {
   position: absolute;
   right: 44rpx;
   bottom: 44rpx;
-  width: 100rpx;
-  height: 100rpx;
+  width: 80rpx;
+  height: 80rpx;
   padding: 20rpx 0;
   border-radius: 12rpx;
   background: #2c2008;
@@ -143,9 +143,22 @@ page view, page label {
   box-sizing: border-box;
 }
 .add_pic image{
-  width: 60rpx;
-  height: 60rpx;
+  width: 40rpx;
+  height: 40rpx;
   margin: auto;
+}
+.delete_item {
+  position: absolute;
+  right: 144rpx;
+  bottom: 44rpx;
+  width: 80rpx;
+  height: 80rpx;
+  padding: 20rpx;
+  border-radius: 12rpx;
+  background: #2c2008;
+  text-align: center;
+  z-index: 5;
+  box-sizing: border-box;
 }
 
 
