--- a/pages/model/joinerInfo/index.wxss
+++ b/pages/model/joinerInfo/index.wxss
@@ -20,10 +20,22 @@
   text-align: center;
   border-radius: 22rpx;
   border: solid #d5d5d5 1rpx;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.input_cell_row .select_tag_item .tag .text {
+  width: 50%;
+  height: 42rpx;
+  line-height: 42rpx;
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: clip;
   color: #333;
   font-size: 24rpx;
-  line-height: 44rpx;
-  box-sizing: border-box;
 }
 
 .input_cell_row .select_tag::after {
@@ -37,6 +49,10 @@
   border: none;
   color: #fff;
   background: #fda402;
+}
+
+.input_cell_row .select_tag .select_tag_item .require .text{
+  color: #fff;
 }
 
 .more_info_row{
@@ -166,8 +182,6 @@
   text-align: right;
 }
 .modal_cell_row .options_item {
-  float: left;
-  width: 42%;
   border-radius: 4rpx;
   margin-right: 4rpx;
   border: solid 1rpx #e5e5e5;
