--- a/pages/model/seniorSetting/index.wxss
+++ b/pages/model/seniorSetting/index.wxss
@@ -23,12 +23,21 @@ page {
   text-align: center;
   border-radius: 22rpx;
   border: solid #d5d5d5 1rpx;
-  color: #333;
-  font-size: 24rpx;
   box-sizing: border-box;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.input_cell_row .select_tag_item .tag .text {
+  width: 50%;
+  height: 42rpx;
+  line-height: 42rpx;
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: clip;
+  color: #333;
+  font-size: 24rpx;
 }
 
 .input_cell_row .select_tag::after {
@@ -44,6 +53,9 @@ page {
   background: #fda402;
 }
 
+.input_cell_row .select_tag .select_tag_item .require .text{
+  color: #fff;
+}
 
 .input_cell_row .wx-switch-input {
   width: 80rpx!important;
