--- a/pages/activities/sign-up/sign-up.wxss
+++ b/pages/activities/sign-up/sign-up.wxss
@@ -119,3 +119,18 @@
   padding: 60rpx;
   background-color: #f2f2f2;
 }
+
+.checkbox_group{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.checkbox_group .checkbox {
+  margin-right: 30rpx;
+  display: flex;
+  align-items: center;
+  font-size: 24rpx;
+  color: #666666;
+}
