--- a/pages/model/change-time/index.wxml
+++ b/pages/model/change-time/index.wxml
@@ -15,7 +15,7 @@
           </picker>
         </view>
       </view>
-      <view class="input_cell_row">
+      <view class="input_cell_row" wx:if="{{showTime}}">
         <view class="label">
           <view class="input_cell_icon">
             <i-icon type="success_fill" size="24" color="#999999" class="input_icon" wx:if="{{activity.payPath == '0'}}" />
